rewrote inner joins in classes

--- a/views/new.erb
+++ b/views/new.erb
@@ -26,6 +26,9 @@
       </select>
     </div>
 
+    <div class="form-el">
+        <input type="submit" value="Sumbit transaction"/>
+        </div>
 
     </div>
 
