--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,8 @@
   <% @transactions.each do |transaction| %>
 
   <div class="transaction">
-    <h3><a href='/transactions/'<%= transaction.id %>"><%= transaction.value %></a></h3>
+    <h3><a href="transactions/<%= transaction.id %>"><%=
+      transaction.value %></a></h3>
     <p>spending_type: <%= transaction.spending_type.tag %></p>
     <p>merchant: <%= transaction.merchant.name %></p>
   </div>
