added merchant views

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,3 +12,8 @@
 
   <% end %>
 </div>
+
+
+<div class = "total-transactions">
+<p>Total Transactions value: <%= "£#{@transactions_total}" %></p>
+</div>
