--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,7 @@
     <nav id="menu">
       <li class="menu-item"><a href='/transactions/'>Transactions</a></li>
        <li class="menu-item"><a href='/transactions/new'>Add new transaction</a></li>
+       <li class="menu=item"><a href='/merchants/index'>Merchants</a></li>
     </nav>
     <h1 id ="logo">Clan Money Tracker</h1>
     <%= yield %>
