show merchant name

--- a/views/merchant/show.erb
+++ b/views/merchant/show.erb
@@ -1,4 +1,4 @@
-<h3><%= @merchant.id %></h3>
+<h3><%= @merchant %></h3>
 
 
-<p>Merchant: <%= @merchant.name %></p>
+<p>Merchant: <%= @merchants.name %></p>
