--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,9 +8,10 @@
   </head>
   <body>
     <nav id="menu">
-      <li class="menu-item"><a href='/transactions/'>Transactions</a></li>
+      <li class="menu-item"><a href='/transactions'>Transactions</a></li>
        <li class="menu-item"><a href='/transactions/new'>Add new transaction</a></li>
-       <li class="menu=item"><a href='/merchants/index'>Merchants</a></li>
+       <li class="menu-item"><a href='/merchants'>Merchants</a></li>
+       <li class="menu-item"><a href="/merchants/new">Add new merchant</a></li>
     </nav>
     <h1 id ="logo">Clan Money Tracker</h1>
     <%= yield %>
