--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,7 @@
        <li class="menu-item"><a href='/transactions/new'>Add new transaction</a></li>
        <li class="menu-item"><a href='/merchants'>Merchants</a></li>
        <li class="menu-item"><a href="/merchants/new">Add new merchant</a></li>
+       <li class="menu-item"><a href="/spending_types">Spending tags</a></li>
     </nav>
     <h1 id ="logo">Clan Money Tracker</h1>
     <%= yield %>
