show spending_type tags

--- a/views/spending/index.erb
+++ b/views/spending/index.erb
@@ -8,7 +8,7 @@
     <h3><a href="spending_types/<%= spending_type.id %>"><%=
       spending_type.tag %></a></h3>
 
-    <p>merchant: <%= merchant.name %></p>
+    <p>spending tags: <%= spending_type.tag %></p>
   </div>
 
   <% end %>
