fixed add new transaction

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
        <li class="menu-item"><a href='/merchants'>Merchants</a></li>
        <li class="menu-item"><a href="/merchants/new">Add new merchant</a></li>
        <li class="menu-item"><a href="/spending_types">Spending tags</a></li>
-       <li class="menu-item"><a href="/spending_types/new">Add new spending</a></li>
+       <li class="menu-item"><a href="/spending_types/new">Add new spending type</a></li>
     </nav>
     <h1 id ="logo">Clan Money Tracker</h1>
     <%= yield %>
