--- a/views/show.erb
+++ b/views/show.erb
@@ -1,7 +1,7 @@
 <h2><%= @transaction.id %></h2>
 
 <p>Value: <%= @transaction.value %></p>
-<p>Merchant: <%= @transaction.merchant.name %></p>
+<p>Merchant: <%= @transaction.merchant.name.capitalize %></p>
 <p>Spending_type: <%=@transaction.spending_type.tag %></p>
 
 <a href="/transactions/<%= @transaction.value %>/edit">Edit</a>
