--- a/views/new.erb
+++ b/views/new.erb
@@ -11,7 +11,7 @@
     <label for="merchant_select">Select Merchant:</label>
     <select name="merchant_id" id="merchant_select">
       <% @merchants.each do |merchant| %>
-          <option value=<%= merchant.id %>><%= merchant.name.capitalize %></option>
+          <option value=<%= merchant.id %>><%= merchant.name %></option>
       <% end %>
     </select>
   </div>
