--- a/views/spending/index.erb
+++ b/views/spending/index.erb
@@ -11,7 +11,6 @@
     <p>spending tags: <%= spending_type.tag %></p>
   </div>
 
-
 </div>
 
 <div class="button_element">
@@ -19,5 +18,7 @@
     <input type = "submit" value='DELETE'>
   </form>
   </div>
+
+<h4> <a href="/spending_types/new"> <i class="material-icons"></i>Create a custom tag</a> </h4>
 
   <% end %>
