--- a/views/show.erb
+++ b/views/show.erb
@@ -1,9 +1,14 @@
 <h2><%= @transaction.id %></h2>
 
+<table>
+
+
 <p>Value: <%= @transaction.value %></p>
 <p>Merchant: <%= @transaction.merchant.name.capitalize %></p>
 <p>Spending_type: <%=@transaction.spending_type.tag %></p>
 
-<a href="/transactions/<%= @transaction.value %>/edit">Edit</a>
+<a href="/transactions/<%= @transaction.id %>/edit">Edit</a>
 
 <form action="/transactions/<%= @transaction.id %>/delete" method="POST"><input type="submit" value="Delete"></form>
+
+</table>
