--- a/views/show.erb
+++ b/views/show.erb
@@ -9,6 +9,9 @@
 
 <a href="/transactions/<%= @transaction.id %>/edit">Edit</a>
 
-<form action="/transactions/<%= @transaction.id %>/delete" method="POST"><input type="submit" value="Delete"></form>
+<div class="button_element">
+<form action='/transactions/<%= @transaction.id %>/delete' method="POST">
+  <input type="submit" value="Delete"></form>
+</div>
 
 </table>
