extension: sorted transactions by transaction date

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,7 @@
       transaction.value %></a></h3>
     <p>spending_type: <%= transaction.spending_type.tag %></p>
     <p>merchant: <%= transaction.merchant.name %></p>
+    <p><%= transaction.timestamp %></p>
   </div>
 
   <% end %>
