added a standardized date button in transaction/new

--- a/views/new.erb
+++ b/views/new.erb
@@ -27,7 +27,7 @@
 
     <div class="form-el">
       <label for="timestamp">Time:</label>
-      <input type="text" name="timestamp" id="timestamp"/>
+      <input type="date" name="timestamp" id="timestamp"/>
     </div>
 
 
