moved add new merchant option from layout to merchant index

--- a/views/merchant/index.erb
+++ b/views/merchant/index.erb
@@ -1,6 +1,7 @@
 
 	<h3>Merchants All</h3>
 
+<a href='/merchants/new'>Add new merchant</a>
 
   <div id="merchant-wrapper">
     <% @merchants.each do |merchant| %>
@@ -11,7 +12,6 @@
 
       <p>merchant: <%= merchant.name %></p>
     </div>
-
 
   </div>
 
