--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <h2>Transactions</h2>
-
+<a href='/transactions/new'>Add new transaction</a>
 <div id="transaction-wrapper">
   <% @transactions.each do |transaction| %>
 
