--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <title>Clan Money Tracker</title>
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/tables.css">
+
+
   </head>
   <body>
     <nav id="menu">
       <li class="menu-item"><a href='/transactions'>Transactions</a></li>
        <li class="menu-item"><a href='/merchants'>Merchants</a></li>
-       <!-- <li class="menu-item"><a href="/merchants/new">Add new merchant</a></li> -->
        <li class="menu-item"><a href="/spending_types">Spending tags</a></li>
-       <li class="menu-item"><a href="/spending_types/new">Add new spending type</a></li>
+
 
     </nav>
     <h1 id ="logo">Clan Money Tracker</h1>
