--- a/views/merchant/show.erb
+++ b/views/merchant/show.erb
@@ -1,6 +1,12 @@
-<h3><%= @merchant %></h3>
+<h3><%= @merchant.name %></h3>
+
+<table>
+<a href="/merchants/<%= @merchant.id %>/edit">Edit </a>
 
 
-<p>Merchant: <%= @merchants.name %></p>
-
-<a href="/merchants/<%= @merchants.id %>/edit">Edit </a>
+	<div class="button_element">
+	<form action='/merchants/<%= @merchant.id %>/delete' method='POST' >
+	    <input type = "submit" value='DELETE'>
+	  </form>
+	  </div>
+</table>
