--- a/views/spending/show.erb
+++ b/views/spending/show.erb
@@ -1,8 +1,6 @@
 <h3><%= @spending_type.tag %></h3>
 
-
-
-
+<table>
 <a href="/spending_types/<%= @spending_type.id %>/edit">Edit </a>
 
 
@@ -11,3 +9,5 @@
     <input type = "submit" value='DELETE'>
   </form>
   </div>
+  
+</table>
