added background picture and updtaed transaction index spacing

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,13 @@
-<link rel="stylesheet" href="/style.css">
-<h2>Transactions</h2>
 
 
-<div class = "total-transactions">
-<p>Total Transactions value: <%= "£#{@transactions_total}" %></p>
-</div>
 
-<a href='/transactions/new'>Add new transaction</a>
-
+<nav>
+  <h2>Transactions</h2>
+  <div class = "total-transactions">
+    <p>Total Transactions value: <%= "£#{@transactions_total}" %></p>
+  </div>
+  <a href='/transactions/new'>Add new transaction</a>
+</nav>
 
 <table>
     <tr>
