--- a/public/tables.css
+++ b/public/tables.css
@@ -1,6 +1,18 @@
+body {
+  font-family: 'Oxygen', sans-serif;
+  background: url('https://images.unsplash.com/photo-1534951009808-766178b47a4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
+  background-repeat: no-repeat;
+}
+
+h1 {
+  padding-top: 0px;
+  margin-top: 0px;
+}
+
 table {
   width: 90%;
-  margin: 10px auto;
+  margin-left: 30px;
+  background-color: white;
 }
 
 th {
@@ -25,4 +37,15 @@ td {
 .FirstColumn{
   width: 50%;
   text-align: right;
+}
+
+nav {
+  padding: 0px;
+  margin: 0px;
+  padding-bottom: 20px;
+}
+
+nav ul li {
+  margin-bottom: 15px;
+  text-transform: uppercase;
 }
