--- a/public/tables.css
+++ b/public/tables.css
@@ -4,6 +4,15 @@ body {
   background-repeat: no-repeat;
 }
 
+.grid {
+  border: solid 1px mediumaquamarine; //FUN COLOUR!
+}
+
+.grid-row {
+  display: flex;
+  flex-direction: row;
+}
+
 h1 {
   padding-top: 0px;
   margin-top: 0px;
@@ -48,4 +57,9 @@ nav {
 nav ul li {
   margin-bottom: 15px;
   text-transform: uppercase;
+}
+
+
+footer {
+  display: block;
 }
