--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,8 +6,31 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="stylesheet" type="text/css" href="/tables.css">
+    <style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
 
+li {
+  float: left;
+}
 
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+</style>
   </head>
   <body>
     <nav id="menu">
@@ -19,6 +42,13 @@
     </nav>
     <h1 id ="logo">Clan Money Tracker</h1>
     <%= yield %>
+
+
+    <footer>
+      <p>Made by: Dai Talent</p>
+      <p>Contact information: <a href="mailto:daniela@daitalent.co.uk">daniela@daitalent.co.uk</a>.</p>
+    </footer>
+
 
   </body>
 </html>
