--- a/public/tables.css
+++ b/public/tables.css
@@ -1,22 +1,3 @@
-body {
-  font-family: 'Oxygen', sans-serif;
-  background: url('https://images.unsplash.com/photo-1534951009808-766178b47a4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
-  background-repeat: no-repeat;
-}
-
-.grid {
-  border: solid 1px mediumaquamarine; //FUN COLOUR!
-}
-
-.grid-row {
-  display: flex;
-  flex-direction: row;
-}
-
-h1 {
-  padding-top: 0px;
-  margin-top: 0px;
-}
 
 table {
   width: 90%;
@@ -48,18 +29,58 @@ td {
   text-align: right;
 }
 
-nav {
-  padding: 0px;
-  margin: 0px;
-  padding-bottom: 20px;
+
+/* MERCHANT TABLE CSS */
+
+.merchant-table {
+  width: 20%;
+  margin-left: 10px;
+  background-color: #F8F9F9;
 }
 
-nav ul li {
-  margin-bottom: 15px;
-  text-transform: uppercase;
+.merchant-th {
+    width: 10%;
+    text-align: left;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    background-color: lightblue;
 }
 
+.merchant-td {
+    width: 10%;
+    text-align: left;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+}
 
-footer {
-  display: block;
+/*Spending-Table CSS*/
+
+
+.spending-table {
+  width: 20%;
+  margin-left: 10px;
+  background-color: #F8F9F9;
+}
+
+.spending-th {
+    width: 10%;
+    text-align: left;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    background-color: lightblue;
+}
+
+.spending-td {
+    width: 10%;
+    text-align: left;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
 }
