--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,47 +6,27 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="stylesheet" type="text/css" href="/tables.css">
-    <style>
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
-</style>
+    <link rel="stylesheet" type="text/css" href="/structure.css">
   </head>
   <body>
-    <nav id="menu">
+    <nav class="layout-nav">
       <ul>
         <li class="menu-item"><a href='/transactions'>Transactions</a></li>
         <li class="menu-item"><a href='/merchants'>Merchants</a></li>
         <li class="menu-item"><a href="/spending_types">Spending tags</a></li>
      </ul>
     </nav>
+
+
     <h1 id ="logo">Clan Money Tracker</h1>
     <%= yield %>
 
 
+
+
     <footer>
       <p>Made by: Dai Talent</p>
-      <p>Contact information: <a href="mailto:daniela@daitalent.co.uk">daniela@daitalent.co.uk</a>.</p>
+      <p>Contact information: <a href="mailto:daniela@daitalent.co.uk">daniela@daitalent.co.uk</a></p>
     </footer>
 
 
