fixed a drop list for transaction edit

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,9 +24,13 @@
 
 
 
-    <footer>
-      <p>Made by: Dai Talent</p>
-      <p>Contact information: <a href="mailto:daniela@daitalent.co.uk">daniela@daitalent.co.uk</a></p>
+
+
+<br>
+
+    <footer class ="layout-footer">
+      <p>made by: Dai Talent</p>
+      <p>contact information: <a href="mailto:daniela@daitalent.co.uk">daniela@daitalent.co.uk</a></p>
     </footer>
 
 
