--- a/views/merchant/edit.erb
+++ b/views/merchant/edit.erb
@@ -1,4 +1,4 @@
-<h3>Edit<%=@merchant %></h3>
+<h3>Edit</h3>
 
 <form method="POST" action="/merchants/<%= @merchant.id %>">
   <div class="form-wrapper">
@@ -17,4 +17,29 @@
 
 
 
-    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
