--- a/views/spending/edit.erb
+++ b/views/spending/edit.erb
@@ -1,5 +1,4 @@
-<h3>Edit<%=@spending_type %></h3>
-
+<h3>Edit</h3>
 <form method="POST" action="/spending_types/<%= @spending_type.id %>">
   <div class="form-wrapper">
 
@@ -14,3 +13,26 @@
     </div>
 
     </div>
+    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
