--- a/public/structure.css
+++ b/public/structure.css
@@ -24,15 +24,24 @@ h1, h2, h3 {
 }
 
 
+.flex {
+  display: flex;
+}
 
+.flex--row {
+  flex-direction: row;
+}
 
+/*Layout footer*/
 
-
-
-
-
-
-
-footer {
-    display: block;
+.layout-footer {
+  display: block;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: grey;
+  color: #CD6155;
+  text-align: center;
+  font-size: "8";
   }
