--- a/views/spending/index.erb
+++ b/views/spending/index.erb
@@ -1,7 +1,7 @@
 <nav class="spending-nav">
   <ul>
     <li><h3>Spending Type</h3></li>
-    <li><h3><a href='/spending_types/new'>Add new spending tag</a>
+    <li><h3><a href='/spending_types/new'>Add New Spending Tag</a>
     </h3></li>
   </ul>
 </nav>
@@ -29,3 +29,9 @@
   <% end %>
 
   </table>
+
+<br>
+<br>
+<br>
+<br>
+<br>
